Modifiaction du titre par défaut du template d'US

--- a/.github/ISSUE_TEMPLATE/user_story.yml
+++ b/.github/ISSUE_TEMPLATE/user_story.yml
@@ -1,6 +1,6 @@
 name: User Story
 description: Créer une nouvelle User Story
-title: "[US] En tant que [rôle], je veux [action] pour [bénéfice]"
+title: "[USXX] Intitulé de la User Story"
 labels: ["user-story", "triage"]
 body:
   - type: markdown
