--- a/owl-next-app/package.json
+++ b/owl-next-app/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "doppler run -- next dev --turbopack",
+    "build": "doppler run -- next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "format": "prettier --write .",
