--- a/owl-next-app/package.json
+++ b/owl-next-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/localizations": "^3.26.2",
     "@clerk/nextjs": "^6.33.7",
+    "@vercel/speed-insights": "^1.2.0",
     "lucide-react": "^0.552.0",
     "next": "15.5.6",
     "react": "19.1.0",
