--- a/owl-api/package.json
+++ b/owl-api/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "express",
+  "name": "owl-api-ts",
+  "version": "1.0.0",
+  "description": "API for Project OwL",
+  "main": "dist/index.js",
   "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "doppler run -- tsx watch src/index.ts"
+  },
   "dependencies": {
-    "express": "5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
-    "@types/node": "20.11.17",
-    "@types/express": "5.0.0",
-    "typescript": "5.8.3"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.9",
+    "tsx": "^4.20.6",
+    "typescript": "^5.5.3"
   }
 }
