--- a/owl-api/package.json
+++ b/owl-api/package.json
@@ -15,13 +15,13 @@
     "express": "^4.19.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
-    "tsx": "^4.20.6",
-    "typescript": "^5.5.3"
+    "tsx": "^4.20.6"
   }
 }
