modif github actions

--- a/.github/workflows/api-quality-checks.yml
+++ b/.github/workflows/api-quality-checks.yml
@@ -3,21 +3,13 @@ name: CI - Code Quality - API
 on:
   push:
     paths:
-      - 'src/**'
-      - 'scripts/**'
-      - 'package.json'
-      - 'package-lock.json'
-      - 'tsconfig.json'
+      - 'owl-api/**'
       - '.github/workflows/api-quality-checks.yml'
       
   pull_request:
     branches: [ main, develop ]
     paths:
-      - 'src/**'
-      - 'scripts/**'
-      - 'package.json'
-      - 'package-lock.json'
-      - 'tsconfig.json'
+      - 'owl-api/**'
       - '.github/workflows/api-quality-checks.yml'
 
 jobs:
